# wcwidth-stubs

./: .pre-commit-config.yaml  README.md  dprint.json  pyproject.toml  taskfile.yaml
.github/workflows/: lint.yaml  release.yaml
src/wcwidth-stubs/: __init__.py  __init__.pyi
