[build-system]
requires = ["flit-core==3.12.0"]
build-backend = "flit_core.buildapi"

[project]
name = "wcwidth-stubs"
version = "0.3.0.1"
description = "typing stubs for wcwidth"
requires-python = ">=3.8"
authors = [
  { name = "trim21", email = "trim21.me@gmail.com" },
]
dependencies = [
  'wcwidth>=0.3.0,<1',
]
readme = "README.md"
license = { text = "MIT" }

[project.urls]
repository = 'https://github.com/trim21/wcwidth-stubs'

[tool.flit.module]
name = "wcwidth-stubs"
